EVALSYS-1534 - Fix taking evaluation mobile views

--- a/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
+++ b/sakai-evaluation-tool/src/webapp/content/css/evaluation_base.css
@@ -1778,11 +1778,11 @@ table.tablesorter th.header.headerSortDown {
   position: relative;
 }
 .evaluation .item.text .content textarea {
-  width: 90%;
-  min-width: 600px;
-  padding: 0;
+  width: calc(100% - 40px);
+  padding: 2 5px;
   margin: 0;
   margin-left: 40px;
+  resize: vertical !important;
 }
 .evaluation .item.text .content .na {
   position: absolute;
@@ -2180,52 +2180,57 @@ ol.itemListEval span.label {
     margin: 0.5em 0;
 }
 
-@media only screen and (max-width: 810px) {
-#facebox {
-    left: 0px !important;
-    width: 100%;
-}
+@media only screen and (max-width: 800px) {
+  #facebox {
+      left: 0px !important;
+      width: 100%;
+  }
 
-#facebox table {
-    width: 100%;
-}
+  #facebox table {
+      width: 100%;
+  }
 
-.portletBody {
-  padding: 5px;
-}
+  .portletBody {
+    padding: 5px;
+  }
 
-.evalEditorSmall {
+  .evalEditorSmall {
+      width: 100% !important;
+  }
+
+  #show-item-scale\:\: {
+    margin-top: 10px;
+  }
+
+  #show-item-scale\:\: select {
     width: 100% !important;
-}
+    margin-bottom: 10px;
+  }
 
-#show-item-scale\:\: {
-  margin-top: 10px;
-}
+  #show-item-sharing\:\:item-sharing-list-selection, #show-item-expert\:\:item-expert-list-selection, #show-scale-display\:\:scale-display-list-selection {
+    width: 100% !important;
+    margin-bottom: 10px;
+  }
 
-#show-item-scale\:\: select {
-  width: 100% !important;
-  margin-bottom: 10px;
-}
+  [name="show-item-expert::expert-desc"] {
+    width: 100% !important;
+    margin-bottom: 10px;
+  }
 
-#show-item-sharing\:\:item-sharing-list-selection, #show-item-expert\:\:item-expert-list-selection, #show-scale-display\:\:scale-display-list-selection {
-  width: 100% !important;
-  margin-bottom: 10px;
-}
+  .visibleFS legend {
+    padding: initial !important;
+    margin-left: 0 !important;
+  }
 
-[name="show-item-expert::expert-desc"] {
-  width: 100% !important;
-  margin-bottom: 10px;
-}
+  .cke_toolbar_break {
+    clear: initial !important;
+  }
 
-.visibleFS legend {
-  padding: initial !important;
-  margin-left: 0 !important;
-}
+  .cke_chrome {
+      min-width: 100% !important;
+  }
 
-.cke_toolbar_break {
-  clear: initial !important;
-}
-
-.cke_chrome {
-    min-width: 100% !important;
+  .fullVertical li {
+    width: 100%;
+  }
 }
